# stm32f4discovery-opencm3-template

./: CMakeLists.txt  Cortex-M4.cmake  README.md  libopencm3.cmake  main.c
